public/styles/site.css
html, body { 
  height:100%; 
  font-family: 'Source Sans Pro', sans-serif !important;
}

h2.title {
  margin: 0px;
  color: rgb(255,255,255);
}

h2.index {
  padding: 0px 20px 20px 20px;
}

a {
  color: #CE5B1C;
}

a:hover {
    color: #CE5B1C;
}

a:visited {
    color: #CE5B1C;
}

.max-width {
  max-width: 100%;
}

.max-height {
  max-height: 100%;
}

nav ul {
  padding: 0px;
  text-align: center;
}

nav li {
  list-style: none;
  font-size: 18px;
  line-height: 1.6;
  display: inline;
  padding: 10px;
}

.content {
  position: relative;
}

.photo {
  position: absolute;
  left: 0px;
  background-size: cover;
  background-image: url("/images/cover.png");
  width: 100%;
  height: 100%;
  display: inline-block;
}

.intro {
  width: 100%;
  background-color: rgba(0, 0, 0, .4);
  position: absolute;
  left: 0px;
  z-index: 2;
  color: rgb(255, 255, 255);
  flex-direction: column;
  justify-content: center;
  display: flex;
}

.intro-text {
  padding: 10px 20px 30px 20px; 
  background-color: rgba(0, 0, 0, .4);
  text-align: center;
}

.project-photo {
    object-fit: cover;
    width: 100%;
}

.student-photo {
  width: 75px;
  height: 75px;
  object-fit: cover;
}

.student-header {
  margin-top: 5px;
}

.inline-parent {
  display: inline-block;
}

.inline-child {
  display: inline-block;
  vertical-align: top;
}

.logo {
  width: 100%;
}

.child-photo {
  padding: 6px 3px !important;
}

.parent-preview {
  position: relative;
  height: 200px;
  padding: 0px;
  margin: 5px;
}

.image-preview-div {
  position: absolute;
  z-index: 1;
  width: 100%;
}

.image-preview-img {
  object-fit: cover;
  width: 100%;
  height: 200px;
  border-radius: 5px;
}

.link-preview {
  height: 200px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  position: absolute;
  z-index: 2;
  width: 100%;
  text-align: center;
  background-color: rgba(0, 0, 0, .2);
  border-radius: 5px;
}

.hover {
  background-color: rgba(0, 0, 0, .4);
}

